# rustbox

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  Cargo.toml  Dockerfile  Dockerfile.executor  LICENSE  README.md  SANDBOX_CONTENTION_ISSUE.md  concurrency_rewrite_summary.md  config-executor.json  config-schema.json  config.json  deny.toml  dev.py  docker-compose.judge.yml  docker-compose.yml  mcp.json  multipass.md  plan.md  skills-lock.json  summary.md  testing_prime.md  walkthrough.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.root_cleanup_archive/.claude/: settings.local.json
.wrangler/cache/: pages.json  wrangler-account.json
benches/: cold_start_bench.rs
benches/suite/: problems.json  run_suite.sh
docker/base/: Dockerfile
docker/isolate/: Dockerfile
docker/service/: Dockerfile
docker/stress/: Dockerfile  Dockerfile.custom  config-judge.json  run-adversarial.sh  run-stress-custom.sh  run-stress.sh
docs/: OPTIMIZATION-PROMPT.md
docs-site/: astro.config.mjs  config.toml
docs-site/.astro/: data-store.json  settings.json
docs-site/content/: _index.md
docs-site/sass/: _variables.scss  main.scss
docs/adr/: ADR-001-strict-mode-fail-closed.md  ADR-002-supervisor-sandbox-init.md  ADR-003-cgroup-selection.md
docs/operations/: metrics.md
docs/qa/: compatibility-matrix.md  reliability-test-plan.md  security-test-plan.md  supply-chain-security.md
docs/release/: go-no-go-gate.md  hardening-report.md  security-checklist.md
documentation/: package.json
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_binding_parse.rs  fuzz_config_deser.rs  fuzz_verdict.rs
indexes/: README.md  module-map.md
judge-service/: Cargo.toml
judge-service/src/: api.rs  config.rs  constants.rs  db.rs  job_queue.rs  lib.rs  main.rs  queue.rs  rate_limit.rs  types.rs  worker.rs
judge-service/src/database/: mod.rs  postgres.rs  sqlite.rs  types.rs
judge-service/tests/: e2e.rs  integration_single_node.rs
k8s/: deployment.yml
profiles/reference/: README.md
scripts/: bootstrap-mcp.sh  docker_stress.sh  stress_5k.sh  stress_inner.sh  stress_limits.sh  stress_rps.sh  stress_sieve.sh  unsafe-audit.sh
scripts/mcp/: healthcheck-cgc-mcp.sh  healthcheck-rustbox-mcp.sh  start-cgc-mcp.sh  start-rustbox-mcp.sh
scripts/smoke/: phase2_containment_smoke.sh
src/: cgroup.rs  cli.rs  config.rs  executor.rs  filesystem.rs  isolate.rs  lib.rs  lock_manager.rs  main.rs  namespace.rs  security.rs  security_logging.rs  types.rs
src/config/: config.rs  constants.rs  loader.rs  mod.rs  presets.rs  profile.rs  types.rs  validation.rs  validator.rs
src/core/: mod.rs  proxy.rs  supervisor.rs  types.rs
src/exec/: executor.rs  mod.rs  pipeline.rs  preexec.rs
src/judge/: adapter.rs  checks.rs  envelope.rs  mod.rs  registry.rs
src/kernel/: capabilities.rs  cgroup.rs  cgroup_v1.rs  cgroup_v2.rs  contract.rs  credentials.rs  mod.rs  mount.rs  namespace.rs  network.rs  pidfd.rs  pipeline.rs  runtime_exec.rs  seccomp.rs  signal.rs
src/legacy/: isolate.rs  mod.rs  security.rs
src/observability/: audit.rs  metrics.rs  mod.rs
src/runtime/: executor.rs  isolate.rs  mod.rs  security.rs
src/safety/: cleanup.rs  lock_manager.rs  mod.rs  safe_cleanup.rs  uid_pool.rs  workspace.rs
src/sandbox/: evidence.rs  mod.rs  proxy.rs  supervisor.rs  types.rs
src/testing/: mod.rs  mount_invariance.rs  race_proof.rs
src/utils/: container.rs  env_hygiene.rs  fd_closure.rs  fork_safe_log.rs  json_schema.rs  mod.rs  output.rs
src/verdict/: classifier.rs  json_schema.rs  mod.rs  verdict.rs
tests/: Dockerfile  integration_execution.rs  kernel_integration.rs  kernel_mount_tests.rs  kernel_namespace_tests.rs  seccomp_integration.rs  tier1_config_pipeline.rs  tier1_kernel_api.rs  tier1_uid_pool.rs  tier1_verdict_pipeline.rs  tier2_evidence_quality.rs  tier2_executor_execution.rs  tier2_judge_execution.rs  tier2_resource_limits.rs  tier2_security_enforcement.rs  trybuild.rs  uid_pool_integration.rs
tests/cluster/: cluster_test.sh  docker-compose.test.yml
tests/common/: mod.rs
tests/manifests/: adversarial.json  correctness.json  recovery.json  suite.json
tests/runners/: lib.sh  run-adversarial.sh  run-all.sh  run-bench.sh  run-correctness.sh  run-stress.sh  run-suite.sh  stress.py
tests/typestate_compile_fail/: double_seccomp.rs  double_seccomp.stderr  early_exec_from_fresh.rs  early_exec_from_fresh.stderr  early_exec_from_mounts.rs  early_exec_from_mounts.stderr  early_exec_from_namespaces.rs  early_exec_from_namespaces.stderr  (+12 more)
tmp/: CORRECTNESS_AUDIT.md  CORRECTNESS_AUDIT_FINAL.md  fix.md  kernel-refactoring-summary.md  p0-security-hardening.md  procoder-kernel-analysis.md  procoder-refactoring-complete.md  refactoring-before-after.md  refactoring-checklist.md  skills_for_this_review.txt
web/: package.json  vite.config.ts
(+312 files in other folders)
