[package]
name = "rustbox"
version = "0.1.0"
edition = "2021"

[features]
default = ["core"]
core = []
zen = []

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
nix = { version = "0.27", features = ["process", "signal", "fs", "user", "sched", "mount", "resource", "hostname"] }
libc = "0.2"
fastrand = "2.0"
crossbeam-channel = "0.5"
sha2 = "0.10"
caps = "0.5"
once_cell = "1.19"

[dev-dependencies]
trybuild = "1.0"

[[bin]]
name = "rustbox"
path = "src/main.rs"

[[bin]]
name = "isolate"
path = "src/bin/isolate.rs"

[[bin]]
name = "judge"
path = "src/bin/judge.rs"

[[bench]]
name = "cold_start_bench"
path = "benches/cold_start_bench.rs"
harness = false
