[package]
name = "rustbox-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.rustbox]
path = ".."

[[bin]]
name = "fuzz_config_deser"
path = "fuzz_targets/fuzz_config_deser.rs"
doc = false

[[bin]]
name = "fuzz_verdict"
path = "fuzz_targets/fuzz_verdict.rs"
doc = false

[[bin]]
name = "fuzz_binding_parse"
path = "fuzz_targets/fuzz_binding_parse.rs"
doc = false

[workspace]
