[package]
name = "judge-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "judge-service"
path = "src/main.rs"

[lib]
name = "judge_service"
path = "src/lib.rs"

[dependencies]
rustbox = { path = ".." }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-channel = "2"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
fastrand = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
flate2 = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
